--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+html,
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
